# TypeCrypt

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  run_all_tests.sh
.github/workflows/: cd.yml  ci.yml  full-test.yml  haskell.yml  racket.yml  rust.yml  zig.yml
docs/: development.md  index.md  overview.md  research.md
haskell/: README.md  typecrypt.cabal
haskell/spec/: Core.hs
haskell/src/: Types.hs
haskell/test/: Spec.hs
racket/: README.md  main.rkt  test.rkt
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/tests/: crypt_tool.rs
tests/: cross_lang_key_derivation.sh  crypt_hs.hs  crypt_zig.zig  dump_hs.hs  dump_zig.zig  haskell_encrypt_cli.sh
zig/: README.md  build.zig
zig/src/: key.zig  main.zig
