cabal-version: 2.4
name: typecrypt
version: 0.1.0.0
build-type: Simple

default-language: Haskell2010

library
  exposed-modules: Types
  hs-source-dirs: src
  build-depends: base >=4.7 && <5

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base >=4.7 && <5,
      typecrypt,
      QuickCheck >=2.14
  default-language: Haskell2010
