cabal-version: 2.4
name: typecrypt
version: 0.1.0.0
build-type: Simple

library
  exposed-modules: Types
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5,
      bytestring >=0.10,
      cryptonite >=0.27
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base >=4.7 && <5,
      typecrypt,
      bytestring,
      cryptonite >=0.27,
      QuickCheck,
      hspec >=2.7
  default-language: Haskell2010
